# Vesta

./: .gcloudignore  .gitignore  Dockerfile  README.md  entrypoint.sh  logs.json
backend/: .env.example  .gitignore  README.md  ROUTER_STRUCTURE.md  init_db.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.ps1  run_tests.py
backend/app/: initial_data.py  main.py
backend/app/agents/: calendar_agent.py  email_agent.py  knowledge_agent.py  root_agent.py  secretary_agent.py  summary_agent.py  weather_agent.py
backend/app/api/: README.md  deps.py  routes.py
backend/app/core/: README.md  __init__.py  config.py  database.py  logger.py  scheduler.py  security.py  settings.py
backend/app/crud/: base.py  crud_chat.py  crud_device.py  crud_facts.py  crud_news.py  crud_session.py  crud_user.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  base.py  chat.py  chat_message.py  device.py  item.py  news.py  user.py  user_facts.py
backend/app/repositories/: __init__.py  base.py  item.py  user.py
backend/app/schemas/: base.py  calendar.py  chat.py  device.py  enums.py  gmail.py  news.py  open_meteo.py  tasks.py  token.py  tts.py  user.py  user_facts.py  weather.py
backend/app/services/: README.md  __init__.py  adk_service.py  base.py  chat_manager.py  gemini_tools.py  gmail_service.py  google_auth.py  google_calendar.py  google_tasks.py  google_tts.py  home.py  item.py  knowledge.py  llm.py  llm_tools.py  open_meteo_service.py  user.py  weather.py
backend/chroma_db/: chroma.sqlite3
backend/migrations/: README  env.py
backend/migrations/versions/: 02d8062b187a_add_auth_fields_to_user.py  07606d60fa58_init_with_sessions.py  28c10e261cd3_initial_migration.py  2b1c06cfe7d0_add_google_token_status_to_user.py  2bf3bbddc881_add_summary_field.py  451d9f9c7aae_add_cascade.py  52f305bef49d_create_user_facts_table.py  d2b2c637e350_add_city_name_to_user_table.py  e30bc4d09687_add_google_auth_fields.py
backend/tests/: README.md  conftest.py  test_auth.py  test_integration.py  test_items.py  test_main.py  test_performance.py  test_users.py
backend/tests/api/: test_calendar.py  test_calendar_extended.py  test_chat.py  test_chat_additions.py  test_chat_extended.py  test_cron.py  test_devices.py  test_devices_extended.py  test_gmail_api.py  (+8 more)
(+148 files in other folders)
